unpackaged/config/ready/StudentRequest/objects/rio_ed__RIO_Education_Settings__c.object
<CustomObject>
    <fields>
        <fullName>redu_Agreement_Active_Statuses__c</fullName>
        <defaultValue>"Active"</defaultValue>
        <description>Comma separated list of Agreement Active Statuses</description>
        <inlineHelpText>Comma separated list of Agreement Active Statuses</inlineHelpText>
        <label>TransferCredit Agreement Active Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Program_Completion_Fee_Due_Days__c</fullName>
        <description>The number of days after completing a Program that the Program Completion fees are due.</description>
        <inlineHelpText>The number of days after completing a Program that the Program Completion fees are due.</inlineHelpText>
        <label>Program Completion Fee Due Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redu_Transfer_Credit_Approved_Statuses__c</fullName>
        <defaultValue>"Approved"</defaultValue>
        <description>Comma separated list of Transfer Credits Approved Statuses</description>
        <inlineHelpText>Comma separated list of Transfer Credits Approved Statuses</inlineHelpText>
        <label>Transfer Credit Approved Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Transfer_Credit_Grade_Result__c</fullName>
        <defaultValue>"Credit Transfer"</defaultValue>
        <description>Course Connection Grade Result to be set by Transferred Credits</description>
        <inlineHelpText>Course Connection Grade Result to be set by Transferred Credits</inlineHelpText>
        <label>Transfer Credit Grade Result</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Transfer_Credit_Release_Grades__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Course Connection check Release Grades field when Transfer Credits is approved</description>
        <inlineHelpText>Course Connection check Release Grades field when Transfer Credits is approved</inlineHelpText>
        <label>Transfer Credit Release Grades</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>